--
-- PostgreSQL database dump
--

\restrict sj6NjkBebPn2E9oI4tbA36ddAcMmPDBkfH6tfXsulmMgCR6CebztjsBsb3PAsF3

-- Dumped from database version 15.16 (Debian 15.16-1.pgdg13+1)
-- Dumped by pg_dump version 15.16 (Debian 15.16-1.pgdg13+1)

SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SELECT pg_catalog.set_config('search_path', '', false);
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

--
-- Name: pg_cron; Type: EXTENSION; Schema: -; Owner: -
--

CREATE EXTENSION IF NOT EXISTS pg_cron WITH SCHEMA pg_catalog;


--
-- Name: EXTENSION pg_cron; Type: COMMENT; Schema: -; Owner: 
--

COMMENT ON EXTENSION pg_cron IS 'Job scheduler for PostgreSQL';


SET default_tablespace = '';

SET default_table_access_method = heap;

--
-- Name: characters; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.characters (
    id integer NOT NULL,
    balance real NOT NULL,
    name character varying(20) NOT NULL,
    eyecolor_id integer NOT NULL,
    gender_id integer NOT NULL,
    height_id integer NOT NULL,
    house_id integer NOT NULL,
    profile_id integer NOT NULL,
    skincolor_id integer NOT NULL,
    weight_id integer NOT NULL
);


ALTER TABLE public.characters OWNER TO postgres;

--
-- Name: characters_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.characters ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.characters_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: eyecolors; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.eyecolors (
    id integer NOT NULL,
    name character varying(20) NOT NULL,
    CONSTRAINT eyecolors_name_check CHECK (((name)::text = ANY ((ARRAY['BROWN'::character varying, 'BLUE'::character varying, 'GREEN'::character varying, 'GRAY'::character varying])::text[])))
);


ALTER TABLE public.eyecolors OWNER TO postgres;

--
-- Name: eyecolors_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.eyecolors ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.eyecolors_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: gang_affiliations; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.gang_affiliations (
    id integer NOT NULL,
    join_date date NOT NULL,
    character_id integer NOT NULL,
    gang_id integer NOT NULL
);


ALTER TABLE public.gang_affiliations OWNER TO postgres;

--
-- Name: gang_affiliations_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.gang_affiliations ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.gang_affiliations_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: gangs; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.gangs (
    id integer NOT NULL,
    name character varying(20) NOT NULL,
    type character varying(20) NOT NULL
);


ALTER TABLE public.gangs OWNER TO postgres;

--
-- Name: gangs_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.gangs ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.gangs_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: genders; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.genders (
    id integer NOT NULL,
    name character varying(20) NOT NULL,
    CONSTRAINT genders_name_check CHECK (((name)::text = ANY ((ARRAY['MALE'::character varying, 'FEMALE'::character varying, 'OTHER'::character varying])::text[])))
);


ALTER TABLE public.genders OWNER TO postgres;

--
-- Name: genders_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.genders ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.genders_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: heights; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.heights (
    id integer NOT NULL,
    name character varying(20) NOT NULL,
    CONSTRAINT heights_name_check CHECK (((name)::text = ANY ((ARRAY['SHORT'::character varying, 'AVERAGE'::character varying, 'TALL'::character varying])::text[])))
);


ALTER TABLE public.heights OWNER TO postgres;

--
-- Name: heights_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.heights ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.heights_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: houses; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.houses (
    id integer NOT NULL,
    amount_bathrooms integer NOT NULL,
    amount_rooms integer NOT NULL
);


ALTER TABLE public.houses OWNER TO postgres;

--
-- Name: houses_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.houses ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.houses_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: profiles; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.profiles (
    id integer NOT NULL,
    email character varying(20) NOT NULL,
    first_name character varying(20) NOT NULL,
    last_name character varying(20) NOT NULL,
    password character varying(20) NOT NULL,
    username character varying(20) NOT NULL,
    role_id integer NOT NULL
);


ALTER TABLE public.profiles OWNER TO postgres;

--
-- Name: profiles_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.profiles ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.profiles_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: roles; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.roles (
    id integer NOT NULL,
    name character varying(20) NOT NULL,
    CONSTRAINT roles_name_check CHECK (((name)::text = ANY ((ARRAY['USER'::character varying, 'ADMIN'::character varying])::text[])))
);


ALTER TABLE public.roles OWNER TO postgres;

--
-- Name: roles_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.roles ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.roles_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: skincolors; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.skincolors (
    id integer NOT NULL,
    name character varying(20) NOT NULL,
    CONSTRAINT skincolors_name_check CHECK (((name)::text = ANY ((ARRAY['LIGHT'::character varying, 'MEDIUM'::character varying, 'DARK'::character varying])::text[])))
);


ALTER TABLE public.skincolors OWNER TO postgres;

--
-- Name: skincolors_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.skincolors ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.skincolors_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: weights; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.weights (
    id integer NOT NULL,
    name character varying(20) NOT NULL,
    CONSTRAINT weights_name_check CHECK (((name)::text = ANY ((ARRAY['LIGHT'::character varying, 'AVERAGE'::character varying, 'HEAVY'::character varying])::text[])))
);


ALTER TABLE public.weights OWNER TO postgres;

--
-- Name: weights_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.weights ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.weights_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: characters characters_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.characters
    ADD CONSTRAINT characters_pkey PRIMARY KEY (id);


--
-- Name: eyecolors eyecolors_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.eyecolors
    ADD CONSTRAINT eyecolors_pkey PRIMARY KEY (id);


--
-- Name: gang_affiliations gang_affiliations_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.gang_affiliations
    ADD CONSTRAINT gang_affiliations_pkey PRIMARY KEY (id);


--
-- Name: gangs gangs_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.gangs
    ADD CONSTRAINT gangs_pkey PRIMARY KEY (id);


--
-- Name: genders genders_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.genders
    ADD CONSTRAINT genders_pkey PRIMARY KEY (id);


--
-- Name: heights heights_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.heights
    ADD CONSTRAINT heights_pkey PRIMARY KEY (id);


--
-- Name: houses houses_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.houses
    ADD CONSTRAINT houses_pkey PRIMARY KEY (id);


--
-- Name: profiles profiles_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.profiles
    ADD CONSTRAINT profiles_pkey PRIMARY KEY (id);


--
-- Name: roles roles_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.roles
    ADD CONSTRAINT roles_pkey PRIMARY KEY (id);


--
-- Name: skincolors skincolors_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.skincolors
    ADD CONSTRAINT skincolors_pkey PRIMARY KEY (id);


--
-- Name: characters uk1txcf8pm02ubw824sh7c4hhs6; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.characters
    ADD CONSTRAINT uk1txcf8pm02ubw824sh7c4hhs6 UNIQUE (house_id);


--
-- Name: gangs uk9kbmrexcfgfb2ek99tfsk6hiu; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.gangs
    ADD CONSTRAINT uk9kbmrexcfgfb2ek99tfsk6hiu UNIQUE (name);


--
-- Name: gang_affiliations uk_gang_affiliations_character_gang; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.gang_affiliations
    ADD CONSTRAINT uk_gang_affiliations_character_gang UNIQUE (character_id, gang_id);


--
-- Name: eyecolors ukc5enhuwrv9u6abs7iqruju9ol; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.eyecolors
    ADD CONSTRAINT ukc5enhuwrv9u6abs7iqruju9ol UNIQUE (name);


--
-- Name: profiles ukgkg1kpmjy7f1hm6ugsoxmgisq; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.profiles
    ADD CONSTRAINT ukgkg1kpmjy7f1hm6ugsoxmgisq UNIQUE (username);


--
-- Name: genders ukil5d8rsjgn8m3eao1xfvdqrc7; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.genders
    ADD CONSTRAINT ukil5d8rsjgn8m3eao1xfvdqrc7 UNIQUE (name);


--
-- Name: profiles uklnk8iosvsrn5614xw3lgnybgk; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.profiles
    ADD CONSTRAINT uklnk8iosvsrn5614xw3lgnybgk UNIQUE (email);


--
-- Name: roles ukofx66keruapi6vyqpv6f2or37; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.roles
    ADD CONSTRAINT ukofx66keruapi6vyqpv6f2or37 UNIQUE (name);


--
-- Name: weights ukog71a2sjtlst8p77fhj51ght; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.weights
    ADD CONSTRAINT ukog71a2sjtlst8p77fhj51ght UNIQUE (name);


--
-- Name: skincolors ukpa5q1wtoirsql4rrjd335r3ix; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.skincolors
    ADD CONSTRAINT ukpa5q1wtoirsql4rrjd335r3ix UNIQUE (name);


--
-- Name: heights ukstixs24b4p3vbeeqqac50937h; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.heights
    ADD CONSTRAINT ukstixs24b4p3vbeeqqac50937h UNIQUE (name);


--
-- Name: weights weights_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.weights
    ADD CONSTRAINT weights_pkey PRIMARY KEY (id);


--
-- Name: idx_profiles_email; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_profiles_email ON public.profiles USING btree (email);


--
-- Name: idx_profiles_username; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_profiles_username ON public.profiles USING btree (username);


--
-- Name: characters fk_characters_eyecolor; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.characters
    ADD CONSTRAINT fk_characters_eyecolor FOREIGN KEY (eyecolor_id) REFERENCES public.eyecolors(id);


--
-- Name: characters fk_characters_gender; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.characters
    ADD CONSTRAINT fk_characters_gender FOREIGN KEY (gender_id) REFERENCES public.genders(id);


--
-- Name: characters fk_characters_height; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.characters
    ADD CONSTRAINT fk_characters_height FOREIGN KEY (height_id) REFERENCES public.heights(id);


--
-- Name: characters fk_characters_house; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.characters
    ADD CONSTRAINT fk_characters_house FOREIGN KEY (house_id) REFERENCES public.houses(id);


--
-- Name: characters fk_characters_profile; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.characters
    ADD CONSTRAINT fk_characters_profile FOREIGN KEY (profile_id) REFERENCES public.profiles(id);


--
-- Name: characters fk_characters_skincolor; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.characters
    ADD CONSTRAINT fk_characters_skincolor FOREIGN KEY (skincolor_id) REFERENCES public.skincolors(id);


--
-- Name: characters fk_characters_weight; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.characters
    ADD CONSTRAINT fk_characters_weight FOREIGN KEY (weight_id) REFERENCES public.weights(id);


--
-- Name: gang_affiliations fk_gang_aff_char; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.gang_affiliations
    ADD CONSTRAINT fk_gang_aff_char FOREIGN KEY (character_id) REFERENCES public.characters(id);


--
-- Name: gang_affiliations fk_gang_aff_gang; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.gang_affiliations
    ADD CONSTRAINT fk_gang_aff_gang FOREIGN KEY (gang_id) REFERENCES public.gangs(id);


--
-- Name: profiles fk_profiles_role; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.profiles
    ADD CONSTRAINT fk_profiles_role FOREIGN KEY (role_id) REFERENCES public.roles(id);


--
-- PostgreSQL database dump complete
--

\unrestrict sj6NjkBebPn2E9oI4tbA36ddAcMmPDBkfH6tfXsulmMgCR6CebztjsBsb3PAsF3

